# RUDN_Cpp

./: .gitignore  CMakeLists.txt  FULL_AUDIT.md  IMPROVEMENTS.md  PACK_AND_SEND.md  README.md  TOLERANT_LOADING.md  USAGE.md  calc.cpp
include/: JsonValue.hpp  Lexer.hpp  ProgressBar.hpp
src/: Lexer.cpp  ParallelProcessor.cpp  Serializer.cpp
Лаба 4/: Makefile
Лаба 4/docs/: README.md
Лаба 4/include/: Address.h  Bank.h  BankAccount.h  Client.h  Date.h  PremiumClient.h  Transaction.h
Лаба 4/src/: Address.cpp  Bank.cpp  BankAccount.cpp  Client.cpp  Date.cpp  PremiumClient.cpp  Transaction.cpp  main.cpp
Лаба 5/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
Лаба 6/: Makefile  README.md  university.db  university_db
Лаба 6/include/: DatabaseManager.h  InputValidator.h  StudentRepository.h
Лаба 6/src/: DatabaseManager.cpp  InputValidator.cpp  StudentRepository.cpp  main.cpp
Парсер_итог/benchmarks/: CMakeLists.txt  benchmark_main.cpp  benchmark_memory.cpp  benchmark_parser.cpp  jsonparser
Парсер_итог/benchmarks/include/: Generator.hpp  Serializer.hpp
Парсер_итог/benchmarks/src/: Generator.cpp  ParallelProcessor.cpp  Parser.cpp  Validator.cpp  main.cpp
Парсер_итог/benchmarks/tests/: CMakeLists.txt
Парсер_итог/benchmarks/tests/integration/: CMakeLists.txt  test_large_files.cpp  test_parallel_processing.cpp
Парсер_итог/benchmarks/tests/unit/: CMakeLists.txt  test_jsonvalue.cpp  test_lexer.cpp  test_parser.cpp  test_validator.cpp
лб2/: task1.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
лб3/: task01.cpp  task02.cpp  task10.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
парсер/: CMakeLists.txt
парсер/data/: test_file.json  test_with_errors.json
парсер/include/: ParallelProcessor.hpp  Parser.hpp  SystemInfo.hpp  Validator.hpp
парсер/src/: JsonValue.cpp  Parser.cpp  main.cpp
